Fix add item breaks inbox scroll: Added scroll container to inbox.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -182,8 +182,12 @@ section#signup {
 #inbox-container {
   section#inbox {
     #inbox-page-content-container {
-      overflow-y: auto;
+      overflow-y: hidden;
       padding-bottom: @footer-height;
+      .scroll-container {
+        height: inherit;
+        overflow-y: auto;
+      }
     }
   }
 }
